# GHS_BE_exercise

./: .env  .pre-commit-config.yaml  ASSIGNMENT.md  LICENSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
home_assignment/: __main__.py  app.py  database_settings.py  deps.py  router.py
home_assignment/db/: __init__.py  asset.py  base.py  fee.py  label.py  sql.py  trade.py  user.py
home_assignment/management/: __init__.py  api.py  scalars.py
home_assignment/management/asset/: __init__.py  database.py  resolver.py
home_assignment/management/trade/: __init__.py  database.py  resolver.py
home_assignment/management/user/: __init__.py  database.py  resolver.py
